# od-compiler-bot

./: .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compiler.py  listener.py  pyproject.toml  run.sh  wsgi.py
.github/workflows/: ci.yml
app/: __init__.py
app/util/: compiler_logger.py  docker_actions.py  git_actions.py  utilities.py
docker/: Dockerfile  run.sh
od_compiler/: __init__.py
od_compiler/util/: docker_actions.py  git_actions.py
src/od_compiler/: __init__.py
src/od_compiler/util/: docker_actions.py  git_actions.py  utilities.py
template/: code.dm  map.dmm
templates/: code.dm  map.dmm  server_config.toml  test.dme
tests/: conftest.py
tests/docker_actions/: conftest.py  test_docker.py
tests/git_actions/: test_git.py
tests/main/: conftest.py  test_main.py
tests/utilities/: __init__.py  conftest.py  test_build.py  test_logs.py
tests/utilities/resources/: run_logs.txt
