[tool.poetry]
name = "od-compiler"
version = "0.1.0"
description = "OpenDream compiler listener"
authors = ["Crossedfall <ping@crossedfall.io>"]
readme = "README.md"
packages = [{include = "od_compiler"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
docker = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
