[tool.poetry]
name = "od-compiler"
version = "0.1.1"
description = "OpenDream compiler listener"
authors = ["Crossedfall <ping@crossedfall.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
docker = "^6.0.1"
gitpython = "^3.1.31"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.3.1"
codespell = "^2.2.4"

[tool.black]
line-length = 120

[tool.codespell]
count = ""
skip = ".git,.venv,*.lock,runs,OpenDream"
builtin = "clear,rare,code,en-GB_to_en-US"
ignore-words-list = "od,ro"
quiet = 3
